! Revision 10756 broke parts of SMF (Many Files) ! Fix for admin tables overflow bug with sidebar menus (index.css)

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2702,7 +2702,7 @@ tr.titlebg td
 	position: relative;
 	left: 0;
 	right: 0;
-	overflow: hidden;
+	overflow: auto;
 }
 
 tr.windowbg td, tr.windowbg2 td, tr.approvebg td, tr.highlight2 td
